# ssb-legacy-msg

./: Cargo.toml
benches/: clmr_vs_json.rs
examples/: log_aljoscha  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: roundtrip_clmr.rs  roundtrip_compact.rs  roundtrip_signing.rs
src/: lib.rs  verify.rs
src/clmr/: de.rs  ser.rs
src/json/: de.rs  ser.rs
