[package]
name = "ssb-legacy-msg"
version = "0.1.1"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
ssb-legacy-msg-data = { git="https://github.com/sunrise-choir/legacy-msg-data" }
ssb-multiformats = {git="https://github.com/sunrise-choir/ssb-multiformats"}
serde = {version = "1.0.92", features = ["derive"] }
strtod = { git = "https://github.com/ssbrs/strtod" }
crypto-hash = "0.3.3"
