[package]
name = "ssb-legacy-msg"
version = "0.1.2"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
crypto-hash = "0.3.4"
lexical-core = "0.7.4"
serde = {version = "1.0.106", features = ["derive"] }
ssb-legacy-msg-data = { git="https://github.com/sunrise-choir/legacy-msg-data" }
ssb-multiformats = {git="https://github.com/sunrise-choir/ssb-multiformats"}

