[package]
name = "ssb-json-msg"
version = "0.1.3"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
edition = "2018"
license = "AGPL-3.0"
description = "JSON de/serialization of ssb messages"
repository = "https://github.com/sunrise-choir/ssb-legacy-msg"
documentation = "https://docs.rs/ssb-json-msg/"
readme = "README.md"
keywords = ["json", "ssb", "scuttlebutt"]

[dependencies]
crypto-hash = "0.3.4"
lexical-core = "0.7.4"
serde = {version = "1.0.106", features = ["derive"] }
ssb-json-msg-data = "0.1.2"
ssb-multiformats = "0.2.1"
